# Changelog
# $Id$
mm-dd-15 - Version 5.1.37

  - Fix for Bug#77681 (21429909), rewrite replace sql like insert when rewriteBatchedStatements=true (contribution).
    Thanks to Jie Han for his contribution.

  - Fix for Bug#77449 (21304726) Add 'truncateFractionalSeconds=true|false' property (contribution).
    The property 'sendFractionalSeconds' was added instead of the proposed 'truncateFractionalSeconds'.
    Thanks to KwonNam for his contribution.

  - Fix for Bug#50348 (11758179), mysql connector/j 5.1.10 render the wrong value for dateTime column in GMT DB.

  - Fix for Bug#75670 (20433047), Connection fails with "Public Key Retrieval is not allowed" for native auth.

  - Fix for Bug#76187 (20675539), getTypeInfo report maximum precision of 255 for varchar.

06-30-15 - Version 5.1.36

  - Add test for new syntax 'ALTER TABLE ... DISCARD|IMPORT PARTITION ...' introduced in MySQL 5.7.4.

  - Fix for Bug#20727196, GETPROCEDURECOLUMNS() RETURNS EXCEPTION FOR FUNCTION WHICH RETURNS ENUM/SET TYPE.

  - Fix for Bug#19803348, GETPROCEDURES() RETURNS INCORRECT OUTPUT WHEN USEINFORMATIONSCHEMA=FALSE.

  - Fix for Bug#21215151, DATABASEMETADATA.GETCATALOGS() FAILS TO SORT RESULTS.

  - Fix for Bug#72630 (18758686), NullPointerException during handshake in some situations

  - Fix for Bug#20825727, CONNECT FAILURE WHEN TRY TO CONNECT SHA USER WITH DIFFERENT CHARSET.

  - Flag RowDataDynamic.isInterrupted removed as it isn't needed.

  - Fix for Bug#20518653, XSL FILES IN PACKAGES

  - Fix for Bug#20804635, GETTIME() AND GETDATE() FUNCTIONS FAILS WHEN FRACTIONAL PART EXISTS

  - Fix for Bug#62452 (16444069), NPE thrown in JDBC4MySQLPooledException when statement is closed.

  - Fix for BUG#70927 (17810800), Connector/J COM_CHANGE_USER handling is broken

  - Fix for Bug#75335 (20283655), Maven artifact for Connector/J is missing source jar.

  - Fix for BUG#75592 (20408891), "SHOW VARIABLES WHERE" is expensive.
